2015-07-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Paragraph.pm,
	* tp/Texinfo/Convert/Line.pm,
	* tp/Texinfo/Convert/UnFilled.pm,
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.xs,
	* tp/Texinfo/Convert/XSParagraph/xspara.c (add_next): Remove an 
	unused parameter.

2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/Makefile.am: Clear CFLAGS.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Don't goto a 
	label inside an if (0) { ... } block.

	* tp/Texinfo/Convert/XSParagraph/configure.ac (fetch_conf): New 
	function, to replace fetch_conf.pl script.  Use Perl executable 
	from ${PERL} instead of /usr/bin/env perl, to make it easier for
	the user to use a different perl.

2015-07-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (new_formatter): Uncomment 
	line using XSParagraph module.  Don't call XSParagraph::hello.
	* tp/Texinfo/Convert/XSParagraph/xspara.c (xspara_hello)
	(xspara_init): Rename.  Specify whether an error occurred in the 
	return value.
	* tp/Texinfo/Convert/XSParagraph/XSParagraph.pm: Place code in 
	BEGIN block.  Call XSParagraph::init, and on error, replace 
	XSParagraph module with Texinfo::Convert::Paragraph.

	* tp/t/converters_tests.t: Skip
	"at_commands_in_refs_utf8 file_info".

2015-07-24  Karl Berry  <karl@freefriends.org>

	* util/htmlxref.cnf (flex): no mono manual.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/refcard/txirefcard.texi: 'h' for Info tutorial, not 'H'.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Writing a Menu, Command List),
	* doc/refcard/txirefcard.tex: Document @validatemenus.

2015-07-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.texi (Nodes): Combine two sentences.  Move advice 
	on not renaming nodes to Node Names.  Remove sentence saying 
	that nodes don't impose a hierarchical structure.
	(@node): Change word "stretch" to "region".  Move remark on how 